# evos-rs

./: Cargo.toml  build.rs
compiler/: Cargo.toml
compiler/src/: lexer.rs  lib.rs  main.rs
evx-format/: Cargo.toml
kernel/: Cargo.toml  build.rs
kernel/config/: default.toml
kernel/src/: descriptors.rs  ffi.rs  framebuffer.rs  initramfs.rs  interrupts.rs  lib.rs  log.rs  macros.rs  main.rs  mem.rs  modules.rs  panic.rs  pci.rs  serial.rs  syscalls.rs  text.rs  time.rs
kernel/src/mem/: phys.rs  virt.rs
kernel/src/modules/: ps2.rs  sata.rs
kernel/src/text/: font.rs  format.rs
ramdisk/: test.txt  todo.txt
src/: main.rs
