cargo-features = ["per-package-target"]

[package]
name = "evkrnl"
version = "0.1.0"
edition = "2024"
forced-target = "x86_64-unknown-none"

[dependencies]
bitvec = { version = "1.0.1", default-features = false }
bootloader_api = "0.11.10"
chrono = { version = "0.4.41", default-features = false }
compile-time = "0.2.0"
linked_list_allocator = { version = "0.10.5", default-features = false }
pc-keyboard = "0.8.0"
raw-cpuid = "11.5.0"
spin = "0.10.0"
uart_16550 = "0.3.2"
x86_64 = "0.15.2"

[build-dependencies]
config = { version = "0.15.11", default-features = false, features = ["toml", "json", "yaml", "json5"] }
serde = { version = "1.0.219", features = ["derive"] }
